memperbaiki bug tombol dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ body {
     font-family: var(--font1);
     text-align: center;
     margin-bottom: 20px;
-    padding: 17px;
     text-decoration: none;
     font-size: 1rem;
     font-weight: bold;
